[tool.poetry]
name = "xmwudrl"
version = "0.1.0"
description = ""
authors = ["wu xiaomin <xmwu@mail.ustc.edu.cn>"]

[tool.poetry.dependencies]
python = "^3.7"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^4.5.0"
matplotlib = "^3.5.1"
numpy = "1.21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
